Fix h3 spacings

--- a/landing-pages/frekkls/src/css/_base.css
+++ b/landing-pages/frekkls/src/css/_base.css
@@ -13,7 +13,8 @@ h3 {
   font-size: 2vw;
   font-weight: 500;
   text-transform: uppercase;
-  line-height: 3;
+  margin-top: 2vw;
+  margin-bottom: 2vw;
 }
 
 strong {
